--- a/app/src/main/res/layout/profil.xml
+++ b/app/src/main/res/layout/profil.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#fff"
+    android:background="@drawable/bgitemprofil"
     android:layout_height="40dp">
 
     <LinearLayout
@@ -10,13 +10,22 @@
         android:layout_height="match_parent">
 
         <TextView
+
             android:id="@+id/tv_menuprofil"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4sp"
-            android:layout_marginLeft="10sp"
-            android:textSize="22sp"
+            android:background="#FFFFFF"
+            android:layout_marginLeft="15sp"
+            android:textSize="18sp"
             android:text="Menu"/>
+
+        <ImageView
+            android:id="@+id/img_menuprofil"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher_profilbutton_foreground"/>
+
 
     </LinearLayout>
 
